composer update mlaa/humanities-commons

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,12 @@ services:
       image: eeacms/corpus:latest
       command: sh -c "worker production.ini"
       environment:
-        - REDIS_URL=redis://redis
+        - REDIS_URL=redis://redis:6379/0
+      volumes:
+        - corpus-data:/corpus
+
+  redis:
+    image: redis
+
+volumes:
+  corpus-data:
