--- a/src/eea.corpus/development.ini
+++ b/src/eea.corpus/development.ini
@@ -1,3 +1,17 @@
 ###
 # app configuration
-# https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.htm
+# https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
+###
+[composite:main]
+use = egg:Paste#urlmap
+/ = corpus
+/rq = rq-dashboard
+
+[app:rq-dashboard]
+use = egg:eea.corpus#rq-dashboard
+
+[app:corpus]
+use = egg:eea.corpus
+
+pyramid.reload_templates = true
+pyramid.debug_authoriza
