fix pep8 violations

--- a/src/eea.corpus/development.ini
+++ b/src/eea.corpus/development.ini
@@ -14,4 +14,13 @@ use = egg:eea.corpus#rq-dashboard
 use = egg:eea.corpus
 
 pyramid.reload_templates = true
-pyramid.debug_authoriza
+pyramid.debug_authorization = false
+pyramid.debug_notfound = false
+pyramid.debug_routematch = false
+pyramid.default_locale_name = en
+pyramid.includes =
+    pyramid_tm
+    pyramid_deform
+
+# the templates bellow are for overrides
+pyramid_deform.template_search_path = eea.corpus:template
