increase code coverage

--- a/src/eea.corpus/development.ini
+++ b/src/eea.corpus/development.ini
@@ -23,4 +23,17 @@ pyramid.includes =
     pyramid_deform
 
 # the templates bellow are for overrides
-pyramid_deform.template_search_path = eea.corpus:template
+pyramid_deform.template_search_path = eea.corpus:templates/
+corpus.secret = bigsecret
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
+
+###
+# wsgi server configuration
+###
+
+[server:main]
+use = egg:waitress#main
+l
