--- a/src/eea.corpus/development.ini
+++ b/src/eea.corpus/development.ini
@@ -36,4 +36,21 @@ corpus.secret = bigsecret
 
 [server:main]
 use = egg:waitress#main
-l
+listen = 0.0.0.0:6543
+
+###
+# logging configuration
+# https://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
+###
+
+[loggers]
+keys = root, eea_corpus
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = IN
