--- a/src/eea.corpus/development.ini
+++ b/src/eea.corpus/development.ini
@@ -53,4 +53,19 @@ keys = console
 keys = generic
 
 [logger_root]
-level = IN
+level = INFO
+handlers = console
+
+[logger_eea_corpus]
+level = DEBUG
+handlers =
+qualname = eea_corpus
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s:%(lineno)s][%(threadNa
