--- a/src/eea.corpus/production.ini
+++ b/src/eea.corpus/production.ini
@@ -3,3 +3,53 @@
 use = egg:Paste#urlmap
 / = corpus
 /rq = rq-dashboard
+
+[app:rq-dashboard]
+use = egg:eea.corpus#rq-dashboard
+
+[app:corpus]
+use = egg:eea.corpus
+
+pyramid.reload_templates = false
+pyramid.debug_authorization = false
+pyramid.debug_notfound = false
+pyramid.debug_routematch = false
+pyramid.default_locale_name = en
+pyramid.includes =
+    pyramid_tm
+    pyramid_deform
+
+pyramid_deform.template_search_path = eea.corpus:templates/
+# TODO: read this from environment
+corpus.secret = bigsecret
+
+[server:main]
+use = egg:waitress#main
+listen = *:6543
+
+[loggers]
+keys = root, eea_corpus
+
+[handlers]
+keys = console
+
+[formatters]
+keys = generic
+
+[logger_root]
+level = WARN
+handlers = console
+
+[logger_eea_corpus]
+level = WARN
+handlers =
+qualname = eea_corpus
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = generic
+
+[formatter_generic]
+format = %(asctime)s %(levelname)-5.5s [%(name)s:%(lineno)s][%(threadName)s] %(message)s
