--- a/src/eea.corpus/requirements.txt
+++ b/src/eea.corpus/requirements.txt
@@ -29,3 +29,81 @@ fuzzywuzzy==0.15.0
 gensim==2.2.0
 html5lib==1.0.1
 hupper==1.0
+idna==2.6
+ijson==2.3
+iso8601==0.1.11
+itsdangerous==0.24
+Jinja2==2.9.6
+joblib==0.11
+Mako==1.0.7
+MarkupSafe==1.0
+matplotlib==2.0.2
+msgpack-numpy==0.4.1
+msgpack-python==0.5.4
+murmurhash==0.28.0
+networkx==2.1
+nltk==3.2.4
+numexpr==2.6.2
+numpy==1.14.1
+olefile==0.44
+pandas==0.20.3
+Paste==2.0.3
+PasteDeploy==1.5.2
+pathlib==1.0.1
+peppercorn==0.5
+phrasemachine==1.0.1
+Pillow==4.2.1
+plac==0.9.6
+plaster==0.5
+plaster-pastedeploy==0.4.1
+preshed==1.0.0
+py==1.4.34
+pycparser==2.18
+pyemd==0.5.1
+Pygments==2.2.0
+pyLDAvis==2.1.1
+pyparsing==2.2.0
+Pyphen==0.9.4
+pyramid==1.9.1
+pyramid-chameleon==0.3
+pyramid-debugtoolbar==4.3
+pyramid-deform==0.2
+pyramid-mako==1.0.2
+pyramid-tm==2.2
+pytest==3.1.3
+pytest-cov==2.5.1
+python-dateutil==2.6.0
+python-Levenshtein==0.12.0
+pytz==2017.2
+redis==2.10.5
+regex==2017.4.5
+repoze.lru==0.6
+requests==2.18.4
+rq==0.8.1
+rq-dashboard==0.3.8
+scikit-learn==0.19.1
+scipy==1.0.0
+six==1.11.0
+smart-open==1.5.3
+spacy==2.0.9
+termcolor==1.1.0
+textacy==0.6.0
+thinc==6.10.2
+toolz==0.9.0
+tqdm==4.19.6
+transaction==2.1.2
+translationstring==1.3
+ujson==1.35
+Unidecode==1.0.22
+urllib3==1.22
+venusian==1.1.0
+waitress==1.0.2
+wcwidth==0.1.7
+webencodings==0.5.1
+WebOb==1.7.3
+WebTest==2.0.28
+Werkzeug==0.12.2
+wordcloud==1.3.1
+wrapt==1.10.11
+zope.deprecation==4.3.0
+zope.interface==4.4.2
